syntax = "proto3";

package ru.otus.protobuf.generated;

option java_multiple_files = true;

message InitialClientMessage {
    int32 firstValue = 1;
    int32 lastValue = 2;
}
message ServerMessage {
    int32 currentValue = 1;
}

message HwEmpty {}

service RemoteNumberSequenceService {
    rpc getNumberSequence(InitialClientMessage) returns (stream ServerMessage);
}
